<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.RegionFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/etDateStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/selecciona_una_fecha"/>

            <EditText
                android:id="@+id/etDateEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDateStart"
                android:layout_margin="10dp"
                android:gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/selecciona_una_fecha"
                android:enabled="false"/>

            <CheckBox
                android:id="@+id/cbRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rango_de_fecha"
                app:layout_constraintStart_toStartOf="@+id/etDateEnd"
                app:layout_constraintTop_toBottomOf="@+id/etDateEnd" />


            <TextView
                android:id="@+id/tvRegions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regiones"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbRange"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/item_country"
                tools:itemCount="5"
                android:id="@+id/rvRegions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegions" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbRange"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tvEmptyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccione_una_fecha_para_ver_datos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegions"
                android:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>