<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.activity.RegionDetailActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"/>

    <EditText
        android:id="@+id/etDateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/selecciona_una_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <EditText
        android:id="@+id/etDateEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDateStart"
        android:layout_margin="10dp"
        android:gravity="center"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/selecciona_una_fecha"
        android:enabled="false"/>

    <CheckBox
        android:id="@+id/cbRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rango_de_fecha"
        app:layout_constraintStart_toStartOf="@+id/etDateEnd"
        app:layout_constraintTop_toBottomOf="@+id/etDateEnd" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRange"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llConfirmedDeath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_ndatos"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_ndatos"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNewConfirmedDeath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llConfirmedDeath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue"
        android:visibility="visible"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvNewConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_ndatos"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvNewDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_ndatos"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCasesRecovers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llNewConfirmedDeath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue"
        android:visibility="visible"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_ndatos"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvRecovers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_ndatos"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRange"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>